--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -75,45 +75,70 @@
                     <div class="leftSide"></div>
                     <div class="body">
                         <div class="centercaselle">
-                        <a href="serra1base.html">
-                            <div class="caselle">
+                            <a href="serra1base.html">
+                                <div class="caselle">
                                     <img class="img" src="immagini/arduino.jpg">
-                                        <figcaption>Serra 1.0 Marchio S P R O U T<br/>una serra per ogni tipo di cliente</figcaption>
+                                    <figcaption>Serra 1.0 Marchio S P R O U T<br />una serra per ogni tipo di cliente</figcaption>
+                                </div>
+                            </a>
+                            <div class="caselle">
+                                <img class="img" src="../immagini/arduino.jpg">
+                                <a href="arduino.html"><figcaption>Arduino<br />scheda Arduino 1.0</figcaption></a>
                             </div>
-                        </a>
-                        <div class="caselle">
-                            <img class="img" src="../immagini/arduino.jpg">
-                            <a href="arduino.html"><figcaption>Arduino<br />scheda Arduino 1.0</figcaption></a>
+                            <div class="caselle">
+                                <img class="img" src="../immagini/breadboar.jpg">
+                                <a href="breadboard.html"><figcaption>Breadboard<br /><br /></figcaption></a>
+                            </div>
+                            <div class="caselle">
+                                <img class="img" src="../immagini/senstemp.jpg">
+                                <a href="sensoretemperatura.html"><figcaption>Sensore temperatura<br /><br /></figcaption></a>
+                            </div>
+                            <div class="caselle">
+                                <img class="img" src="../immagini/servomotore.jpg">
+                                <a href="servomotore.html"><figcaption>Servomotore X4<br /><br /></figcaption></a>
+                            </div>
+                            <div class="caselle">
+                                <img class="img" src="../immagini/sensum.jpg">
+                                <a href="sensorediumidità.html"><figcaption>Sensore di umidità<br /><br /></figcaption></a>
+                            </div>
+                            <div class="caselle">
+                                <img class="img" src="../immagini/bluetht.jpg">
+                                <a href="sensorebluetooth.html"><figcaption>Modulo bluetooth<br /><br /></figcaption></a>
+                            </div>
+                            <div class="caselle">
+                                <img class="img" src="../immagini/fotoresistore.jpg">
+                                <a href="fotoresistore.html"><figcaption>Fotoresistore<br /><br /></figcaption></a>
+                            </div>
+                            <div class="caselle">
+                                <img class="img" src="../immagini/pompa.png">
+                                <a href="pompadiirrigazione.html"><figcaption>Pompa irrigazione<br /><br /></figcaption></a>
+                            </div>
+                            <div class="caselle">
+                                <img class="img" src="">
+                                <a href="powerbank.html"><figcaption>Power Bank<br /><br /></figcaption></a>
+                            </div>
+                            <div class="caselle">
+                                <img class="img" src="">
+                                <a href="sensorediumiditànelterreno.html"><figcaption>Sensore di umidità nel terreno<br /><br /></figcaption></a>
+                            </div>
+                            <div class="caselle">
+                                <img class="img" src="">
+                                <a href="Ventola.html"><figcaption>Ventola<br /><br /></figcaption></a>
+                            </div>
+                            <div class="caselle">
+                                <img class="img" src="">
+                                <a href="panelloLCD.html"><figcaption>Panello LCD<br /><br /></figcaption></a>
+                            </div>
+                            <div class="caselle">
+                                <img class="img" src="">
+                                <a href="sensoreultrasuoni.html"><figcaption>Sensore Ultrasuoni<br /><br /></figcaption></a>
+                            </div>
+                            <div class="caselle">
+                                <img class="img" src="">
+                                <a href="relay.html"><figcaption>Relay<br /><br /></figcaption></a>
+                            </div>
+
                         </div>
-                        <div class="caselle">
-                            <img class="img" src="../immagini/breadboar.jpg">
-                            <a href="breadboard.html"><figcaption>breadboard<br /><br /></figcaption></a>
-                        </div>
-                        <div class="caselle">
-                            <img class="img" src="../immagini/senstemp.jpg">
-                            <a href="sensoretemperatura.html"><figcaption>sensore temperatura<br /><br /></figcaption></a>
-                        </div>
-                        <div class="caselle">
-                            <img class="img" src="../immagini/servomotore.jpg">
-                            <a href="servomotore.html"><figcaption>servomotore X4<br /><br /></figcaption></a>
-                        </div>
-                        <div class="caselle">
-                            <img class="img" src="../immagini/sensum.jpg">
-                            <a href="sensorediumidità.html"><figcaption>sensore di umidità<br /><br /></figcaption></a>
-                        </div>
-                        <div class="caselle">
-                            <img class="img" src="../immagini/bluetht.jpg">
-                            <a href="sensorebluetooth.html"><figcaption>modulo bluetooth<br /><br /></figcaption></a>
-                        </div>
-                        <div class="caselle">
-                            <img class="img" src="../immagini/fotoresistore.jpg">
-                            <a href="fotoresistore.html"><figcaption>fotoresistore<br /><br /></figcaption></a>
-                        </div>
-                        <div class="caselle">
-                            <img class="img" src="../immagini/pompa.png">
-                            <a href="pompadiirrigazione.html"><figcaption>pompa irrigazione<br /><br /></figcaption></a>
-                        </div>
-                    </div>
                     </div>
                     <div class="rightSide"></div>
                     <div class="footer">
