--- a/sito/ITALIANO/powerbank.html
+++ b/sito/ITALIANO/powerbank.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>SPROUT</title>
@@ -80,13 +80,13 @@
             <div class="leftSide"></div>
             <div class="body">
                 <div>
-                    <img class="imgdettaglio2" src="../immagini/fotoresistore.jpg" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Fotoresistore </div>
+                    <img class="imgdettaglio2" src="" width="250px" height="300px" />
+                    <div class="titolodettaglio2"> Power Bank </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il fotoresistore &egrave; un componente la cui resistenza dipende dalla quantit&Agrave; di luce che lo colpisce. Funziona come un normale resistore, ma la sua resistenza diminuisce all'aumentare della quantit&agrave; di luce che la percuote.</p>
-                        <p class="aprezzo">0,95 &euro;</p>
+                        <p class="testobase">Il powerbank &egrave; una batteria ricaricabile portatile che viene usato per ricaricare apparechiature elettronoche, a seconda delle carrateristiche del dispositivo.</p>
+                        <p class="aprezzo">9,77 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
                         </div>
