--- a/sito/ITALIANO/sensorediumidità.html
+++ b/sito/ITALIANO/sensorediumidità.html
@@ -80,13 +80,13 @@
             <div class="leftSide"></div>
             <div class="body">
                 <div>
-                    <img class="imgdettaglio2" src="" width="250px" height="300px" />
+                    <img class="imgdettaglio2" src="../immagini/sensum.jpg" width="250px" height="300px" />
                     <div class="titolodettaglio2"> Sensore di Umidit&agrave; </div>
                 </div>
                 <div>
                     <div class="rt">
                         <p class="testobase">Il sensore di umidità viene usato per permettere di trasformare il parametro "umidit&agrave; relativa", in poche parole per misurare l'umidit&agrave; nell'ambiente, e trasformarlo in un segnale elettrico.</p>
-                        <p class="aprezzo">24,99 &euro;</p>
+                        <p class="aprezzo">0,68 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
                         </div>
