--- a/sito/ITALIANO/sensorediumiditànelterreno.html
+++ b/sito/ITALIANO/sensorediumiditànelterreno.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>SPROUT</title>
@@ -80,13 +80,13 @@
             <div class="leftSide"></div>
             <div class="body">
                 <div>
-                    <img class="imgdettaglio2" src="../immagini/fotoresistore.jpg" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Fotoresistore </div>
+                    <img class="imgdettaglio2" src="" width="250px" height="300px" />
+                    <div class="titolodettaglio2"> Sensore di umidità nel terreno </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il fotoresistore &egrave; un componente la cui resistenza dipende dalla quantit&Agrave; di luce che lo colpisce. Funziona come un normale resistore, ma la sua resistenza diminuisce all'aumentare della quantit&agrave; di luce che la percuote.</p>
-                        <p class="aprezzo">0,95 &euro;</p>
+                        <p class="testobase">Il sensore di umidit&agrave; nel terreno &egrave; un dispositivo che permette di misurare la quantit&agrave; di acqua all'interno del terreno per poter determinare la uniformit&agrave; delle condizioni di crescit&agrave; delle piante.</p>
+                        <p class="aprezzo">6,00 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
                         </div>
