--- a/sito/ITALIANO/panelloLCD.html
+++ b/sito/ITALIANO/panelloLCD.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>SPROUT</title>
@@ -80,13 +80,13 @@
             <div class="leftSide"></div>
             <div class="body">
                 <div>
-                    <img class="imgdettaglio2" src="../immagini/fotoresistore.jpg" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Fotoresistore </div>
+                    <img class="imgdettaglio2" src="" width="250px" height="300px" />
+                    <div class="titolodettaglio2"> Panello LCD </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il fotoresistore &egrave; un componente la cui resistenza dipende dalla quantit&Agrave; di luce che lo colpisce. Funziona come un normale resistore, ma la sua resistenza diminuisce all'aumentare della quantit&agrave; di luce che la percuote.</p>
-                        <p class="aprezzo">0,95 &euro;</p>
+                        <p class="testobase">Il panello LCD &egrave; un display che utilliza la propriet&agrave; di modulazione della luce dei cristalli liquidi. Utilizzato come dispositivo di visualizzazione in una vasta gamma di applicazioni.</p>
+                        <p class="aprezzo">2,00 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
                         </div>
