--- a/sito/ITALIANO/sensorebluetooth.html
+++ b/sito/ITALIANO/sensorebluetooth.html
@@ -52,7 +52,7 @@
 
         <hr class="a" />
         <div id="menu">
-            <!--Menù di navigazione-->
+            <!--Menï¿½ di navigazione-->
             <div class="testo">
                 <a href="index.html">MEN&Ugrave;</a>
             </div>
@@ -80,13 +80,13 @@
             <div class="leftSide"></div>
             <div class="body">
                 <div>
-                    <img class="imgdettaglio2" src="" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Arduino 1.0 </div>
+                    <img class="imgdettaglio2" src="../immagini/bluetht.jpg" width="250px" height="300px" />
+                    <div class="titolodettaglio2"> Modulo Bluetooth </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Arduino &egrave; un sistema hardware composto da una serie di schede elettroniche dotate di un microprocessore a 8-bit AVR.</p>
-                        <p class="aprezzo">24,99 &euro;</p>
+                        <p class="testobase">Il sensore bluetooth &egrave; un piccolo trasmettitore che trasmette segnali per chiudire dispositivi portatili utilizzando la tecnologia Bluetooth. Il suo raggio di azione &egrave; di 90 metri.</p>
+                        <p class="aprezzo">??? &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
                         </div>
