--- a/sito/ITALIANO/sensoreultrasuoni.html
+++ b/sito/ITALIANO/sensoreultrasuoni.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>SPROUT</title>
@@ -80,13 +80,13 @@
             <div class="leftSide"></div>
             <div class="body">
                 <div>
-                    <img class="imgdettaglio2" src="../immagini/bluetht.jpg" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Modulo Bluetooth </div>
+                    <img class="imgdettaglio2" src="" width="250px" height="300px" />
+                    <div class="titolodettaglio2"> Sensore Ultrasuoni </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il sensore bluetooth &egrave; un piccolo trasmettitore che trasmette segnali per chiudire dispositivi portatili utilizzando la tecnologia Bluetooth. Il suo raggio di azione &egrave; di 90 metri.</p>
-                        <p class="aprezzo">??? &euro;</p>
+                        <p class="testobase">Il sensore ad ultrasuoni &egrave; in grado di rilevare oggetti senza contatto e misurare la distanza degli oggetti dal sensore e per farlo invia degli impulsi sonori ad alta frequenza.</p>
+                        <p class="aprezzo">0,80 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
                         </div>
