--- a/sito/ITALIANO/serra1base.html
+++ b/sito/ITALIANO/serra1base.html
@@ -49,7 +49,7 @@
       <hr class = "a" />
       <div id="menu"> <!--Menù di navigazione-->
                 <div class="testo">
-                    <a href = "index.html">MEN&Ugrave;</a>
+                    <a href = "index.html">HOME</a>
                 </div>
                 <div class="testo">
                     <a href="modellografico.html" class="grafico">GRAFICI</a>
@@ -61,7 +61,7 @@
                   <a href ="inostriprodotti.html">I NOSTRI PRODOTTI</a>
                 </div>
                 <div class="testo">
-                    <a href="arduionoallabase.html">ARDUINO</a>
+                    <a href="arduionoallabase.html">DOWNLOAD</a>
                 </div>
                 <div class="testo">
                     <a href="login.html">LOGIN</a>
