--- a/sito/ITALIANO/breadboard.html
+++ b/sito/ITALIANO/breadboard.html
@@ -52,9 +52,9 @@
 
         <hr class="a" />
         <div id="menu">
-            <!--Menù di navigazione-->
+            <!--Menï¿½ di navigazione-->
             <div class="testo">
-                <a href="index.html">MEN&Ugrave;</a>
+                <a href="index.html">HOME</a>
             </div>
             <div class="testo">
                 <a href="modellografico.html" class="grafico">GRAFICI</a>
@@ -66,7 +66,7 @@
                 <a href="inostriprodotti.html">I NOSTRI PRODOTTI</a>
             </div>
             <div class="testo">
-                <a href="arduionoallabase.html">ARDUINO</a>
+                <a href="arduionoallabase.html">DOWNLOAD</a>
             </div>
             <div class="testo">
                 <a href="login.html">LOGIN</a>
