--- a/sito/ITALIANO/chisiamo.html
+++ b/sito/ITALIANO/chisiamo.html
@@ -146,7 +146,7 @@
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Nicholas Giacobbe.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Giacobbe Nicholas</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Giacobbe Nicholas</figcaption>
 											<figcaption style="text-align: center;">Web Developers - Gruppo A</figcaption>
 										</figure>
 									</div>
