--- a/sito/ITALIANO/index.html
+++ b/sito/ITALIANO/index.html
@@ -99,6 +99,12 @@
 					<div class="leftSide"></div>
 					<div class="body">
 						<h1 class="homee animate__animated animate__flipInX animate__delay-1s">QUESTA E' LA SPROUT</h1>
+						<h3 class="home2 animate__animated animate__flipInX animate__delay-1s">video presentazione dell'azienda</h3>
+						<div class="videoserra  animate__animated animate__fadeIn animate__delay-2s">
+							<video width="850px" height="500px"  controls>
+								<source src="Paolo.mp4" type="video/mp4">
+							</video>
+						</div>
 					</div>
 					<div class="rightSide"></div>
 					<div class="footer">
