--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -82,60 +82,74 @@
                                 </div>
                             </a>
                             <div class="caselle">
+                                <a href="arduino.html">
                                 <img class="img" src="../immagini/arduino.jpg">
-                                <a href="arduino.html"><figcaption>Arduino<br />scheda Arduino 1.0</figcaption></a>
+                                <figcaption>Arduino<br />scheda Arduino 1.0</figcaption></a>
                             </div>
                             <div class="caselle">
+                                <a href="breadboard.html">
                                 <img class="img" src="../immagini/breadboar.jpg">
-                                <a href="breadboard.html"><figcaption>Breadboard<br /><br /></figcaption></a>
+                                <figcaption>Breadboard<br /><br /></figcaption></a>
                             </div>
                             <div class="caselle">
+                                <a href="sensoretemperatura.html">
                                 <img class="img" src="../immagini/senstemp.jpg">
-                                <a href="sensoretemperatura.html"><figcaption>Sensore temperatura<br /><br /></figcaption></a>
+                                <figcaption>Sensore temperatura<br /><br /></figcaption></a>
                             </div>
                             <div class="caselle">
+                                <a href="servomotore.html">
                                 <img class="img" src="../immagini/servomotore.jpg">
-                                <a href="servomotore.html"><figcaption>Servomotore X4<br /><br /></figcaption></a>
+                                <figcaption>Servomotore X4<br /><br /></figcaption></a>
                             </div>
                             <div class="caselle">
+                                <a href="sensorediumidità.html">
                                 <img class="img" src="../immagini/sensum.jpg">
-                                <a href="sensorediumidità.html"><figcaption>Sensore di umidità<br /><br /></figcaption></a>
+                                <figcaption>Sensore di umidità<br /><br /></figcaption></a>
                             </div>
                             <div class="caselle">
+                                <a href="sensorebluetooth.html">
                                 <img class="img" src="../immagini/bluetht.jpg">
-                                <a href="sensorebluetooth.html"><figcaption>Modulo bluetooth<br /><br /></figcaption></a>
+                                <figcaption>Modulo bluetooth<br /><br /></figcaption></a>
                             </div>
                             <div class="caselle">
+                                <a href="fotoresistore.html">
                                 <img class="img" src="../immagini/fotoresistore.jpg">
-                                <a href="fotoresistore.html"><figcaption>Fotoresistore<br /><br /></figcaption></a>
+                                <figcaption>Fotoresistore<br /><br /></figcaption></a>
                             </div>
                             <div class="caselle">
+                                <a href="pompadiirrigazione.html">
                                 <img class="img" src="../immagini/pompa.png">
-                                <a href="pompadiirrigazione.html"><figcaption>Pompa irrigazione<br /><br /></figcaption></a>
+                                <figcaption>Pompa irrigazione<br /><br /></figcaption></a>
                             </div>
                             <div class="caselle">
+                                <a href="powerbank.html">
                                 <img class="img" src="">
-                                <a href="powerbank.html"><figcaption>Power Bank<br /><br /></figcaption></a>
+                                <figcaption>Power Bank<br /><br /></figcaption></a>
                             </div>
                             <div class="caselle">
-                                <img class="img" src="">
-                                <a href="sensorediumiditànelterreno.html"><figcaption>Sensore di umidità nel terreno<br /><br /></figcaption></a>
+                                <a href="sensorediumiditànelterreno.html">
+                                <img class="img" src="../immagini/umterreno.jpg">
+                                <figcaption>Sensore di umidità nel terreno<br /><br /></figcaption></a>
                             </div>
                             <div class="caselle">
-                                <img class="img" src="">
-                                <a href="Ventola.html"><figcaption>Ventola<br /><br /></figcaption></a>
+                                <a href="Ventola.html">
+                                <img class="img" src="../immagini/ventola.jpg">
+                               <figcaption>Ventola<br /><br /></figcaption></a>
                             </div>
                             <div class="caselle">
-                                <img class="img" src="">
-                                <a href="panelloLCD.html"><figcaption>Panello LCD<br /><br /></figcaption></a>
+                                <a href="panelloLCD.html">
+                                <img class="img" src="../immagini/displaylcd.jpg">
+                                <figcaption>Panello LCD<br /><br /></figcaption></a>
                             </div>
                             <div class="caselle">
-                                <img class="img" src="">
-                                <a href="sensoreultrasuoni.html"><figcaption>Sensore Ultrasuoni<br /><br /></figcaption></a>
+                                <a href="sensoreultrasuoni.html">
+                                <img class="img" src="../immagini/sensultrasuoni.jpg">
+                                <figcaption>Sensore Ultrasuoni<br /><br /></figcaption></a>
                             </div>
                             <div class="caselle">
-                                <img class="img" src="">
-                                <a href="relay.html"><figcaption>Relay<br /><br /></figcaption></a>
+                                <a href="relay.html">
+                                <img class="img" src="../immagini/relay.jpg">
+                                <figcaption>Relay<br /><br /></figcaption></a>
                             </div>
 
                         </div>
