--- a/sito/INGLESE/logininglese.html
+++ b/sito/INGLESE/logininglese.html
@@ -53,8 +53,8 @@
 						<a class="lingua">Language</a> <!-- primo list-item, prima voce del menu -->
 						<ul>
 							<!-- Lista annidata: voci del sotto-menu -->
-							<li><a href="../italiano/index.html">Italian</a></li>
-							<li><a href="indexinglese.html">English</a></li>
+							<li><a href="../italiano/index.html">Italiano</a></li>
+							<li><a href="indexinglese.html">Inglese</a></li>
 						</ul> <!-- Fine del sotto-menu -->
 					</li> <!-- Chiudo il list-item -->
 					<!--qui altri list-item -->
