--- a/sito/ITALIANO/index.html
+++ b/sito/ITALIANO/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link
-		rel="stylesheet"
-		href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-	  />
-		<title>SPROUT</title>
-		<meta charset = "UTF-8" />
-		<meta name="author" content="3ci diurno" />
-		<meta name = "description" content="..." />
-		<meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
-		<link href="../style.css" type="text/css" rel="stylesheet" />
-		<link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-		<link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
-		<link rel="icon" type="image/x-icon" href="../immagini/logo.png">
-	</head>
+<head>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+	<title>SPROUT</title>
+	<meta charset="UTF-8" />
+	<meta name="author" content="3ci diurno" />
+	<meta name="description" content="..." />
+	<meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
+	<link href="../style.css" type="text/css" rel="stylesheet" />
+	<link href="home.css" type="text/css" rel="stylesheet" />
+	<link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+	<link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+	<link rel="icon" type="image/x-icon" href="../immagini/logo.png">
+</head>
 
 
 
