--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -47,26 +47,27 @@
             </div>
              
       <hr class = "a" />
-      <div id="menu"> <!--Menù di navigazione-->
-                <div class="testo">
-                    <a href = "index.html">HOME</a>
-                </div>
-                <div class="testo">
-                    <a href="modellografico.html">GRAFICI</a>
-       </div>
-                <div class="testo">
-                    <a href="chisiamo.html">CHI SIAMO</a>
-                </div>
-                <div class="testo">
-                  <a href ="inostriprodotti.html" class = "menuz">I NOSTRI PRODOTTI</a>
-                </div>
-                <div class="testo">
-                    <a href="arduionoallabase.html">DOWNLOAD</a>
-                </div>
-                <div class="testo">
-                    <a href="login.html">LOGIN</a>
-                </div>
-                <hr class = "a" />
+      <div id="menu">
+          <!--Menù di navigazione-->
+          <div class="testo">
+              <a href="indexinglese.html" class="menuz">HOME</a>
+          </div>
+          <div class="testo">
+              <a href="graficiinglese.html">DATA</a>
+          </div>
+          <div class="testo">
+              <a href="chisiamoinglese.html">ABOUT US</a>
+          </div>
+          <div class="testo">
+              <a href="inostriprodottiinglese.html">OUR PRODUCTS</a>
+          </div>
+          <div class="testo">
+              <a href="downloadinglese.html">DOWNLOAD</a>
+          </div>
+          <div class="testo">
+              <a href="logininglese.html">LOGIN</a>
+          </div>
+          <hr class="a" />
       </div>
  
  
