--- a/sito/ITALIANO/relay.html
+++ b/sito/ITALIANO/relay.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>SPROUT</title>
@@ -80,12 +80,12 @@
             <div class="leftSide"></div>
             <div class="body">
                 <div>
-                    <img class="imgdettaglio2" src="../immagini/sensultrasuoni.jpg" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Sensore Ultrasuoni </div>
+                    <img class="imgdettaglio2" src="../immagini/relay.jpg" width="250px" height="300px" />
+                    <div class="titolodettaglio2"> Relay </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il sensore ad ultrasuoni &egrave; in grado di rilevare oggetti senza contatto e misurare la distanza degli oggetti dal sensore e per farlo invia degli impulsi sonori ad alta frequenza.</p>
+                        <p class="testobase"> Il relay ha il compito di collegare un interruttore ad un circuito di corrente; ha un'importanza cruciale</p>
                         <p class="aprezzo">0,80 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
