--- a/sito/INGLESE/downloadinglese.html
+++ b/sito/INGLESE/downloadinglese.html
@@ -74,10 +74,10 @@
 		<div id="menu">
 			<!--Menù di navigazione-->
 			<div class="testo">
-				<a href="indexinglese.html">MEN&Ugrave;</a>
+				<a href="indexinglese.html">HOME</a>
 			</div>
 			<div class="testo">
-				<a href="graficiinglese.html" class="grafico">DATA</a>
+				<a href="graficiinglese.html">DATA</a>
 			</div>
 			<div class="testo">
 				<a href="chisiamoinglese.html">ABOUT US</a>
@@ -86,7 +86,7 @@
 				<a href="inostriprodottiinglese.html">OUR PRODUCTS</a>
 			</div>
 			<div class="testo">
-				<a href="arduinoinglese.html">ARDUINO</a>
+				<a href="downloadinglese.html" class="menuz">DOWNLOAD</a>
 			</div>
 			<div class="testo">
 				<a href="logininglese.html">LOGIN</a>
