--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -50,22 +50,22 @@
       <div id="menu">
           <!--Menù di navigazione-->
           <div class="testo">
-              <a href="indexinglese.html" class="menuz">HOME</a>
+              <a href="index.html">HOME</a>
           </div>
           <div class="testo">
-              <a href="graficiinglese.html">DATA</a>
+              <a href="modellografico.html">GRAFICI</a>
           </div>
           <div class="testo">
-              <a href="chisiamoinglese.html">ABOUT US</a>
+              <a href="chisiamo.html" class="menuz">CHI SIAMO</a>
           </div>
           <div class="testo">
-              <a href="inostriprodottiinglese.html">OUR PRODUCTS</a>
+              <a href="inostriprodotti.html">I NOSTRI PRODOTTI</a>
           </div>
           <div class="testo">
-              <a href="downloadinglese.html">DOWNLOAD</a>
+              <a href="arduionoallabase.html">DOWNLOAD</a>
           </div>
           <div class="testo">
-              <a href="logininglese.html">LOGIN</a>
+              <a href="login.html">LOGIN</a>
           </div>
           <hr class="a" />
       </div>
