--- a/sito/INGLESE/chisiamoinglese.html
+++ b/sito/INGLESE/chisiamoinglese.html
@@ -74,19 +74,19 @@
 		<div id="menu">
 			<!--Menù di navigazione-->
 			<div class="testo">
-				<a href="indexinglese.html">MEN&Ugrave;</a>
+				<a href="indexinglese.html">HOME</a>
 			</div>
 			<div class="testo">
-				<a href="graficiinglese.html" class="grafico">DATA</a>
+				<a href="graficiinglese.html">DATA</a>
 			</div>
 			<div class="testo">
-				<a href="chisiamoinglese.html">ABOUT US</a>
+				<a href="chisiamoinglese.html" class="menuz">ABOUT US</a>
 			</div>
 			<div class="testo">
 				<a href="inostriprodottiinglese.html">OUR PRODUCTS</a>
 			</div>
 			<div class="testo">
-				<a href="arduinoinglese.html">ARDUINO</a>
+				<a href="downloadinglese.html">DOWNLOAD</a>
 			</div>
 			<div class="testo">
 				<a href="logininglese.html">LOGIN</a>
