--- a/sito/INGLESE/inostriprodottiinglese.html
+++ b/sito/INGLESE/inostriprodottiinglese.html
@@ -53,10 +53,10 @@
 		<div id="menu">
 			<!--Menù di navigazione-->
 			<div class="testo">
-				<a href="indexinglese.html">MEN&Ugrave;</a>
+				<a href="indexinglese.html">HOME</a>
 			</div>
 			<div class="testo">
-				<a href="modellograficoinglese.html">DATA</a>
+				<a href="graficiinglese.html">DATA</a>
 			</div>
 			<div class="testo">
 				<a href="chisiamoinglese.html">ABOUT US</a>
@@ -65,7 +65,7 @@
 				<a href="inostriprodottiinglese.html" class="menuz">OUR PRODUCTS</a>
 			</div>
 			<div class="testo">
-				<a href="arduinoinglese.html">ARDUINO</a>
+				<a href="downloadinglese.html">DOWNLOAD</a>
 			</div>
 			<div class="testo">
 				<a href="logininglese.html">LOGIN</a>
