--- a/sito/INGLESE/chisiamoinglese.html
+++ b/sito/INGLESE/chisiamoinglese.html
@@ -10,6 +10,7 @@
 	<link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
 	<link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 	<link rel="icon" type="image/x-icon" href="../immagini/logo.png">
+	<link href="../italiano/chisiamo.css" type="text/css" rel="stylesheet" />
 </head>
 
 
@@ -98,7 +99,186 @@
 		<!--Il corpo del sito-->
 		<section class="layout">
 			<div class="leftSide"></div>
-			<div class="body"></div>
+			<div class="body">
+				<div style="padding: 15px;">
+					<h1 class="chisiamo">ABOUT US</h1>
+					<p class="text">
+						Here at <span class="text2">SPROUT</span>, our philosophy is always to aim for quality and to satisfy the customer. With our small greenhouses we want to give everyone a chance to cultivate, not only plants, but also their passions.
+						Through the different sensors and precise programming, we have been able to create a greenhouse capable of updating you on all the values ​​you want: mean, median and mode of temperature and humidity. Our product is compatible with any type of soil and seeds, in order to satisfy you at 360 degrees!
+					</p>
+					<h1 class="chisiamo2">STRENGHT POINTS</h1>
+					<p class="text">
+						Our IT team are curious for excellence, their attention to detail and their desire to do better and to innovate is something that is reflected in our products, which is why we focus above all on Collaboration - You only work better if you know how to work in company - We are together in quality of, best materials, best people products.
+					</p>
+					<h1 class="chisiamo2">LOCATION</h1>
+					<p class="text">
+						You can find us at the Leonardo da Vinci school in Carpi (MO) in the street of Baldassarre Peruzzi 9.
+						Below you will find also a map so that you can locate and visit us.
+					</p>
+					<div class="mappa">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2831.8656339608087!2d10.86935701580353!3d44.783544586621176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477f8d2b8f68203f%3A0x18bf11e34947dd65!2sItis%20Leonardo%20Da%20Vinci!5e0!3m2!1sit!2sit!4v1646903940472!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+					</div>
+				</div>
+				<div>
+					<h1 style="padding-left:10px">OUR TEAM</h1>
+					<div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Albanese Paolo.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Albanese Paolo</figcaption>
+								<figcaption style="text-align: center;">Tester</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Aristarco Michael.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Aristarco Michael</figcaption>
+								<figcaption style="text-align: center;">MVC Team - Automation Level</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Alex Beneventi.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Alex Beneventi</figcaption>
+								<figcaption style="text-align: center;">MVC Team - Business Level</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Lorenzo Bergianti.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Bergianti Lorenzo</figcaption>
+								<figcaption style="text-align: center;">Web Developers - Gruppo A</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Tommaso Curto.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Curto Tommaso</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Team Leader</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Alessandro Fusari.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Fusari Alessandro</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Galavotti Marco.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Galavotti Marco</figcaption>
+								<figcaption style="text-align: center;">Responsabili - PM</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Nicholas Giacobbe.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Giacobbe Nicholas</figcaption>
+								<figcaption style="text-align: center;">Web Developers - Gruppo A</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Goldoni Davis.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Goldoni Davis</figcaption>
+								<figcaption style="text-align: center;">MVC Team - Business Level</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Iliev Ivan.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Iliev Ivan</figcaption>
+								<figcaption style="text-align: center;">Analyst Team - Analyst SW/HW</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Impagliazzo Alberto.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Impagliazzo Alberto</figcaption>
+								<figcaption style="text-align: center;">Web Developers - Gruppo B</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Ispani Filippo.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Ispani Filippo</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Graphic designer</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Koci Flavio.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Koci Flavio</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Federico Meliani.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Meliani Federico</figcaption>
+								<figcaption style="text-align: center;">Analyst Team - Analyst SW/HW</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Marco Montemaggiore.PNG" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Montemaggiore Marco</figcaption>
+								<figcaption style="text-align: center;">MVC Team - Automation Level</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Raimond Paraschiv.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Paraschiv Raimond</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Graphic designer</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Rascutoi Emanuel.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Rascutoi Emanuel</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Rebecchi Simone.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Rebecchi Simone</figcaption>
+								<figcaption style="text-align: center;">Responsabili - PMO</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Rossi Achille.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Rossi Achille</figcaption>
+								<figcaption style="text-align: center;">Web Developers - Gruppo B</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Rossi Alex.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Rossi Alex</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
+							</figure>
+						</div>
+						<div class="avatar">
+							<figure>
+								<img src="../immagini/Rossi Matteo.png" width="200px" height="200px" />
+								<figcaption style="text-align: center; font-weight: bold;">Rossi Matteo</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
+							</figure>
+						</div>
+						<div>
+							<figure class=" avatar">
+								<img src="../immagini/Federico Savani.png" width="200px" height="200px" class=" savani" />
+								<figcaption style="text-align: center; font-weight: bold;">Savani Federico</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
+							</figure>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div class="rightSide"></div>
 			<div class="footer">
 				<div id="copyblock">
