--- a/sito/ITALIANO/chisiamo.html
+++ b/sito/ITALIANO/chisiamo.html
@@ -97,49 +97,49 @@
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Albanese Paolo.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Albanese Paolo</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Albanese Paolo</figcaption>
 											<figcaption style="text-align: center;">Tester</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Aristarco Michael.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Aristarco Michael</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Aristarco Michael</figcaption>
 											<figcaption style="text-align: center;">MVC Team - Automation Level</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Alex Beneventi.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Alex Beneventi</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Alex Beneventi</figcaption>
 											<figcaption style="text-align: center;">MVC Team - Business Level</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Lorenzo Bergianti.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Bergianti Lorenzo</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Bergianti Lorenzo</figcaption>
 											<figcaption style="text-align: center;">Web Developers - Gruppo A</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Tommaso Curto.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Curto Tommaso</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Curto Tommaso</figcaption>
 											<figcaption style="text-align: center;">Marketing Team - Team Leader</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Alessandro Fusari.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Fusari Alessandro</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Fusari Alessandro</figcaption>
 											<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Galavotti Marco.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Galavotti Marco</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Galavotti Marco</figcaption>
 											<figcaption style="text-align: center;">Responsabili - PM</figcaption>
 										</figure>
 									</div>
@@ -153,98 +153,98 @@
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Goldoni Davis.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Goldoni Davis</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Goldoni Davis</figcaption>
 											<figcaption style="text-align: center;">MVC Team - Business Level</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Iliev Ivan.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Iliev Ivan</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Iliev Ivan</figcaption>
 											<figcaption style="text-align: center;">Analyst Team - Analyst SW/HW</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Impagliazzo Alberto.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Impagliazzo Alberto</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Impagliazzo Alberto</figcaption>
 											<figcaption style="text-align: center;">Web Developers - Gruppo B</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Ispani Filippo.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Ispani Filippo</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Ispani Filippo</figcaption>
 											<figcaption style="text-align: center;">Marketing Team - Graphic designer</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Koci Flavio.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Koci Flavio</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Koci Flavio</figcaption>
 											<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Federico Meliani.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Meliani Federico</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Meliani Federico</figcaption>
 											<figcaption style="text-align: center;">Analyst Team - Analyst SW/HW</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Marco Montemaggiore.PNG" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Montemaggiore Marco</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Montemaggiore Marco</figcaption>
 											<figcaption style="text-align: center;">MVC Team - Automation Level</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Raimond Paraschiv.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Paraschiv Raimond</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Paraschiv Raimond</figcaption>
 											<figcaption style="text-align: center;">Marketing Team - Graphic designer</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Rascutoi Emanuel.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Rascutoi Emanuel</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Rascutoi Emanuel</figcaption>
 											<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Rebecchi Simone.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Rebecchi Simone</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Rebecchi Simone</figcaption>
 											<figcaption style="text-align: center;">Responsabili - PMO</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Rossi Achille.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Rossi Achille</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Rossi Achille</figcaption>
 											<figcaption style="text-align: center;">Web Developers - Gruppo B</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Rossi Alex.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Rossi Alex</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Rossi Alex</figcaption>
 											<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
 										</figure>
 									</div>
 									<div class="avatar">
 										<figure>
 											<img  src="../immagini/Rossi Matteo.png" width="200px" height="200px"/>
-											<figcaption style="text-align: center;">Rossi Matteo</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Rossi Matteo</figcaption>
 											<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
 										</figure>
 									</div>
 									<div>
 										<figure  class=" avatar">
 											<img src="../immagini/Federico Savani.png" width="200px" height="200px"  class=" savani"/>
-											<figcaption style="text-align: center;">Savani Federico</figcaption>
+											<figcaption style="text-align: center; font-weight: bold;">Savani Federico</figcaption>
 											<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
 										</figure>
 									</div>									
