--- a/sito/ITALIANO/chisiamo.html
+++ b/sito/ITALIANO/chisiamo.html
@@ -77,15 +77,18 @@
 						<div style="padding: 15px;">
 								<h1 class="chisiamo">CHI SIAMO</h1>
 								<p class="text">
-									Qui da <span class="text2">SPROUT</span>, la nostra filosofia è sempre stata quella di puntare alla qualità e alla soddisfazione dei clienti. Con le nostre piccole serre vogliamo dare una possibilità a tutti di coltivare, non solo le piante, ma anche le passioni.<br /> Grazie ai diversi sensori e alla precisa programmazione, siamo riusciti a realizzare una serra capace di aggiornarti su tutti i valori che desideri: temperatura, umidità, medie e mode e molto altro. Il nostro prodotto è compatibile con qualunque tipo di terriccio e semi, in modo da soddisfarti a 360 gradi!
+									La filosofia di<span class="text2">SPROUT</span>, è sempre stata quella di puntare alla qualità e soddisfare il cliente.
+									Con le nostre piccole serre, vogliamo dare una possibilità a tutti di coltivare non solo piante, ma anche le proprie passioni.
+									Grazie ai diversi sensori e alla precisa programmazione, siamo riusciti a realizzare una serra capace di aggiornarvi su tutti i valori che desiderate conoscere: media, moda e mediana di temperatura e umidità. Il nostro prodotto è compatibile con qualunque tipo di terriccio e semi, in modo da soddisfare le vostre esigenze a 360 gradi!
 								</p>
 							<h1 class="chisiamo2">I NOSTRI PUNTI DI FORZA</h1>
-								<p class="text">
-									Il nostro team di informatici sono dei curiosi per eccellenza, la loro attenzione ai dettagli e la loro voglia di fare sempre meglio e di innovare è una cosa che viene rispecchiata nei nostri prodotti, per questo noi puntiamo soprattutto su Collaborazione - Si lavora solo meglio se sai lavorare in compagnia Qualità dei materiali e produzione - Siamo specificamente puntigliosi su questo, migliori materiali, migliori persone, migliori prodotti. Curiosità - Una mente curiosa è una mente innovativa!
-								</p>
+							<p class="text">
+								Il nostro team è molto interessato al dettaglio: il desiderio di fare sempre meglio e di innovare viene rispecchiato nei nostri prodotti, per questo noi puntiamo soprattutto sulla collaborazione. Infatti, si lavora ancora meglio, se si sa cooperare.
+								Puntiamo alla qualità dei materiali e della produzione: usiamo i migliori materiali, siamo organizzati in un team di esperti e siamo forniti dei migliori prodotti.
+							</p>
 								<h1 class="chisiamo2">DOVE SIAMO</h1>
 								<p class="text">
-									Ci puoi trovare all'istituto Leonardo da Vinci a Carpi(MO) in via Peruzzi 9. Di seguito troverai una mappa in modo da poterci localizzare e venirci a trovare.
+									Ci puoi trovare all'ITIS Leonardo da Vinci a Carpi (Modena), in via Peruzzi 9. Di seguito troverai una mappa, in modo da poterci localizzare e venirci a trovare.
 								</p>
 								<div class="mappa">
 									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2831.8656339608087!2d10.86935701580353!3d44.783544586621176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477f8d2b8f68203f%3A0x18bf11e34947dd65!2sItis%20Leonardo%20Da%20Vinci!5e0!3m2!1sit!2sit!4v1646903940472!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
